// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page.container PageContainer traduction should render correctly in english 1`] = `
<DocumentFragment>
  <div
    class="ft-project-page"
  >
    <div
      class="af-title-bar af-title-bar--backhome"
    >
      <div
        class="container-fluid container af-title-bar__wrapper"
      >
        <a
          class="btn af-btn--circle"
          href="/projects"
          title="Projets"
        >
          <i
            class="glyphicon glyphicon-arrowthin-left"
          />
        </a>
        <h1
          class="af-title-bar__title"
        >
          Information statement
        </h1>
        <small
          class="af-title-bar__subtitle"
        >
          Project type NER
        </small>
      </div>
    </div>
    <div
      class="ft-actionBar"
    >
      <a
        class="ft-actionBar__link"
        href=""
      >
        Export
      </a>
    </div>
    <div
      class="ft-project-page__informationsContainer"
    >
      <article
        class="af-restitution"
      >
        <header
          class="af-restitution__header"
        >
          <div
            class="af-restitution__header-left"
          >
            <div
              class="af-restitution__title"
            >
              <span
                class="af-restitution__title-main"
              >
                General information
              </span>
              <span
                class="af-restitution__title-subtitle"
              />
            </div>
          </div>
        </header>
        <section
          class="af-restitution__content"
        >
          <div
            class="col col-sm-12 col-md-12 col-lg-12 col-xl-12"
          >
            <div
              class="row af-restitution__content-left"
            >
              <div
                class="col-sm-12 col-md-12 col-lg-6 col-xl-6"
              >
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Name
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    Information statement
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Annotation type
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    NER
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Creation date
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    02/01/0001
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Number of files
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    0
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Number of cross annotations
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    -
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Annotations progress
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    32%
                  </dd>
                </dl>
              </div>
              <div
                class="col-sm-12 col-md-12 col-lg-6 col-xl-6"
              >
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Dataset
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    Green card
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Dataset type
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    Image
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Annotators team
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    developers
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Team emails
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    <ul
                      class="af-restitution__listul"
                    >
                      <li
                        class="af-restitution__listul-item"
                      >
                        guillaume.chervet@axa.fr
                      </li>
                      <li
                        class="af-restitution__listul-item"
                      >
                        lilian.delouvy@axa.fr
                      </li>
                    </ul>
                  </dd>
                </dl>
              </div>
            </div>
          </div>
        </section>
      </article>
      <div
        class="ft-rowLabelDataset"
      >
        <div
          class="ft-labels"
        >
          <h2>
            Labels
          </h2>
          <table
            class="af-table"
          >
            <thead
              class="af-table-thead"
            >
              <tr
                class="af-table__tr"
              >
                <th
                  class="af-table__th"
                >
                  Name
                </th>
                <th
                  class="af-table__th"
                >
                  Color
                </th>
              </tr>
            </thead>
            <tbody
              class="af-table__body"
            >
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  Recto
                </td>
                <td
                  class="af-table__cell"
                >
                  <div
                    class="ft-labels__table-td-color"
                  >
                    <div
                      class="af-popover__wrapper"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="af-popover__container af-popover__container--color"
                      >
                        <div
                          class="af-popover__container-over"
                          role="presentation"
                        >
                          <div
                            class="ft-labels__label-color"
                            style="background-color: rgb(33, 33, 33);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  Verso
                </td>
                <td
                  class="af-table__cell"
                >
                  <div
                    class="ft-labels__table-td-color"
                  >
                    <div
                      class="af-popover__wrapper"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="af-popover__container af-popover__container--color"
                      >
                        <div
                          class="af-popover__container-over"
                          role="presentation"
                        >
                          <div
                            class="ft-labels__label-color"
                            style="background-color: rgb(255, 187, 0);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  Signature
                </td>
                <td
                  class="af-table__cell"
                >
                  <div
                    class="ft-labels__table-td-color"
                  >
                    <div
                      class="af-popover__wrapper"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="af-popover__container af-popover__container--color"
                      >
                        <div
                          class="af-popover__container-over"
                          role="presentation"
                        >
                          <div
                            class="ft-labels__label-color"
                            style="background-color: rgb(242, 7, 19);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <h2>
            Annotations
          </h2>
          <table
            class="af-table"
          >
            <thead
              class="af-table-thead"
            >
              <tr
                class="af-table__tr"
              >
                <th
                  class="af-table__th"
                >
                  Emails
                </th>
                <th
                  class="af-table__th"
                >
                  Annotations number
                </th>
              </tr>
            </thead>
            <tbody
              class="af-table__body"
            >
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  lilian.delouvy@axa.fr
                </td>
                <td
                  class="af-table__cell"
                >
                  15
                </td>
              </tr>
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  guillaume.chervet@axa.fr
                </td>
                <td
                  class="af-table__cell"
                >
                  35
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="lock__button-container"
    >
      <button
        class="btn af-btn af-btn--danger"
        icon="lock"
        id="lock-button"
      >
        <span
          class="af-btn__text"
        >
          Close
        </span>
        <i
          class="lock__button-icon glyphicon glyphicon-lock"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page.container PageContainer traduction should render correctly in french 1`] = `
<DocumentFragment>
  <div
    class="ft-project-page"
  >
    <div
      class="af-title-bar af-title-bar--backhome"
    >
      <div
        class="container-fluid container af-title-bar__wrapper"
      >
        <a
          class="btn af-btn--circle"
          href="/projects"
          title="Projets"
        >
          <i
            class="glyphicon glyphicon-arrowthin-left"
          />
        </a>
        <h1
          class="af-title-bar__title"
        >
          Information statement
        </h1>
        <small
          class="af-title-bar__subtitle"
        >
          Projet de type NER
        </small>
      </div>
    </div>
    <div
      class="ft-actionBar"
    >
      <a
        class="ft-actionBar__link"
        href=""
      >
        Exporter
      </a>
    </div>
    <div
      class="ft-project-page__informationsContainer"
    >
      <article
        class="af-restitution"
      >
        <header
          class="af-restitution__header"
        >
          <div
            class="af-restitution__header-left"
          >
            <div
              class="af-restitution__title"
            >
              <span
                class="af-restitution__title-main"
              >
                Informations générales
              </span>
              <span
                class="af-restitution__title-subtitle"
              />
            </div>
          </div>
        </header>
        <section
          class="af-restitution__content"
        >
          <div
            class="col col-sm-12 col-md-12 col-lg-12 col-xl-12"
          >
            <div
              class="row af-restitution__content-left"
            >
              <div
                class="col-sm-12 col-md-12 col-lg-6 col-xl-6"
              >
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Nom
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    Information statement
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Type d'annotation
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    NER
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Date de création
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    02/01/0001
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Nombre de fichiers
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    0
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Nombre d'annotations croisées
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    -
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Avancement annotations
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    32%
                  </dd>
                </dl>
              </div>
              <div
                class="col-sm-12 col-md-12 col-lg-6 col-xl-6"
              >
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Dataset
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    Green card
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Type de dataset
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    Image
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Équipe d'annotateurs
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    developers
                  </dd>
                </dl>
                <dl
                  class="af-restitution__listdef"
                >
                  <dt
                    class="af-restitution__listdef-item"
                  >
                    <span
                      class="af-restitution__text"
                    >
                      Emails de l'équipe
                    </span>
                  </dt>
                  <dd
                    class="af-restitution__listdef-value"
                  >
                    <ul
                      class="af-restitution__listul"
                    >
                      <li
                        class="af-restitution__listul-item"
                      >
                        guillaume.chervet@axa.fr
                      </li>
                      <li
                        class="af-restitution__listul-item"
                      >
                        lilian.delouvy@axa.fr
                      </li>
                    </ul>
                  </dd>
                </dl>
              </div>
            </div>
          </div>
        </section>
      </article>
      <div
        class="ft-rowLabelDataset"
      >
        <div
          class="ft-labels"
        >
          <h2>
            Labels
          </h2>
          <table
            class="af-table"
          >
            <thead
              class="af-table-thead"
            >
              <tr
                class="af-table__tr"
              >
                <th
                  class="af-table__th"
                >
                  Nom
                </th>
                <th
                  class="af-table__th"
                >
                  Couleur
                </th>
              </tr>
            </thead>
            <tbody
              class="af-table__body"
            >
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  Recto
                </td>
                <td
                  class="af-table__cell"
                >
                  <div
                    class="ft-labels__table-td-color"
                  >
                    <div
                      class="af-popover__wrapper"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="af-popover__container af-popover__container--color"
                      >
                        <div
                          class="af-popover__container-over"
                          role="presentation"
                        >
                          <div
                            class="ft-labels__label-color"
                            style="background-color: rgb(33, 33, 33);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  Verso
                </td>
                <td
                  class="af-table__cell"
                >
                  <div
                    class="ft-labels__table-td-color"
                  >
                    <div
                      class="af-popover__wrapper"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="af-popover__container af-popover__container--color"
                      >
                        <div
                          class="af-popover__container-over"
                          role="presentation"
                        >
                          <div
                            class="ft-labels__label-color"
                            style="background-color: rgb(255, 187, 0);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  Signature
                </td>
                <td
                  class="af-table__cell"
                >
                  <div
                    class="ft-labels__table-td-color"
                  >
                    <div
                      class="af-popover__wrapper"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="af-popover__container af-popover__container--color"
                      >
                        <div
                          class="af-popover__container-over"
                          role="presentation"
                        >
                          <div
                            class="ft-labels__label-color"
                            style="background-color: rgb(242, 7, 19);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <h2>
            Annotations
          </h2>
          <table
            class="af-table"
          >
            <thead
              class="af-table-thead"
            >
              <tr
                class="af-table__tr"
              >
                <th
                  class="af-table__th"
                >
                  Emails
                </th>
                <th
                  class="af-table__th"
                >
                  Nombre d'annotations
                </th>
              </tr>
            </thead>
            <tbody
              class="af-table__body"
            >
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  lilian.delouvy@axa.fr
                </td>
                <td
                  class="af-table__cell"
                >
                  15
                </td>
              </tr>
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  guillaume.chervet@axa.fr
                </td>
                <td
                  class="af-table__cell"
                >
                  35
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="lock__button-container"
    >
      <button
        class="btn af-btn af-btn--danger"
        icon="lock"
        id="lock-button"
      >
        <span
          class="af-btn__text"
        >
          Clôturer
        </span>
        <i
          class="lock__button-icon glyphicon glyphicon-lock"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
